tests/snapshots/examples_fixtures/ModuleGraph__ConstStringOrdering.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ConstStringOrdering.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `ModuleGraph.ConstStringOrdering` doesn't match file path `examples/ModuleGraph/ConstStringOrdering.flx`.

  --> examples/ModuleGraph/ConstStringOrdering.flx:3:1
  |
3 | module ModuleGraph.ConstStringOrdering {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
